--- a/photologue/templates/photologue/photo_detail.html
+++ b/photologue/templates/photologue/photo_detail.html
@@ -82,12 +82,14 @@
                     {% endif %}
                         <div class="row">
                             {% if next %}
-                            <a href="{{ next.get_absolute_url }}" class="waves-effect waves-light btn">Next</a>
-                                <img src="{{next.get_thumbnail_url}}">
+                            <a href="{{ next.get_absolute_url }}">
+                                <img class="responsive-img" src="{{next.get_thumbnail_url}}">
+                            </a>
                             {% endif %}
                             {% if previous %}
-                                <a href="{{ previous.get_absolute_url }}" class="waves-effect waves-light btn">previous</a>
-                                <img src="{{ previous.get_thumbnail_url }}">
+                                <a href="{{ previous.get_absolute_url }}">
+                                    <img class="responsive-img" src="{{ previous.get_thumbnail_url }}">
+                                </a>
                             {% endif %}
                         </div>
                     </div>
