--- a/skyfolk/static/sass/gallery.sass
+++ b/skyfolk/static/sass/gallery.sass
@@ -25,7 +25,11 @@ html, body
     left: 0
     z-index: 9999
     display: none
-
+  .endless_more, .endless_loading
+    clear: both
+    text-align: center
+  .endless_more
+    display: block
 .container-gallery
   & .btn-floating
     display: block
