--- a/photologue/templates/photologue/photo_gallery_page.html
+++ b/photologue/templates/photologue/photo_gallery_page.html
@@ -6,11 +6,11 @@
         {% for photo in object_list %}
             <div class="col l2 m12 s12 image-div">
                     <div class="container-image">
-                        <div class="principal-content" style="background-image: url('{{ photo.image.url }}');">
+                        <div class="principal-content">
                                 {% if photo.tags.all %}
                                         <div class="tags-content">
                                             {% for tag in photo.tags.all %}
-                                                <blockquote onclick="location.href='{% url 'photologue:collection-list' photo.owner tag.name %}'">{{ tag.name }}</blockquote>
+                                                <blockquote onclick="location.href='{% url 'photologue:collection-list' photo.owner.username tag.name %}'">{{ tag.name }}</blockquote>
                                             {% endfor %}
                                         </div>
                                 {% endif %}
