--- a/skyfolk/static/sass/login-signup.sass
+++ b/skyfolk/static/sass/login-signup.sass
@@ -146,7 +146,10 @@ body
   text-align: center
   border-top: 3px solid #eee
   margin-bottom: 0 !important
-
+  height: 40px
+  > a
+    display: block
+    margin-top: 1.5%
 .remember-check
   text-align: center
 
