--- a/skyfolk/static/sass/login-signup.sass
+++ b/skyfolk/static/sass/login-signup.sass
@@ -17,37 +17,50 @@ $bluebuttons: #64B5F6
 $blueskyfolk: #1e88e5
 
 body
-  padding: 0
-  margin: auto
-  background-size: 100%
-  max-width: 100%
-  min-height: 100%
+  display: flex
+  min-height: 100vh
   flex-direction: column
-  background-repeat: no-repeat
-  flex-wrap: wrap
+
+main
+  flex: 1 0 auto
+
+.links > li
+  display: inline-block
+.skyfolk-logo
+  position: fixed
+  font-family: "Pacifico", cursive !important
+  margin: auto
+  left: 50%
+  cursor: pointer
+  color: #555 !important
+  font-size: 1.7em
+  letter-spacing: 0.2px
+  color: #555
+  > span
+    color: $blueskyfolk
+    text-shadow: 1px 1px 1px #ccc
 
 .signup
   padding: 10px
 .login
   padding-right: 10px
   padding-left: 10px
-/* Random Background */
-#background_cycler
-  padding: 0
-  margin: 0
+
+.active-img
+  min-height: 100%
+  min-width: 1024px
   width: 100%
-  height: 100%
-  position: absolute
+  height: auto
+  position: fixed
   top: 0
   left: 0
   z-index: -1
-  & img
-    position: fixed
-    width: 100%
-    min-height: 100%
-    z-index: 1
-  & img.active
-    z-index: 3
+
+@media screen and (max-width: 1024px)
+  .active-img
+    left: 50%
+    margin-left: -512px
+
 
 /* LOGO */
 .namesn
@@ -59,7 +72,6 @@ body
   & i
     color: $blueskyfolk
     text-shadow: 1px 1px 1px #ccc
-
   & h5
     position: relative
     left: 87px
@@ -88,57 +100,17 @@ body
     top: 12px
     left: 0
 
-.footer_base
-  width: 100%
-  position: fixed
-  height: auto
-  padding: 10px
-  bottom: 0
-  -webkit-transition: all .1s ease-in-out
-  -moz-transition: all .1s ease-in-out
-  transition: all .1s ease-in-out
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15)
-  background-color: rgba(255, 255, 255, 0.8)
-  text-align: center
-  & a
-    color: #616161
-    font-family: 'Open Sans', sans-serif
-    -moz-transtion: all .2s ease-in
-    -webkit-transition: all .2s ease-in
-    transition: all .2s ease-in
-    cursor: pointer
-    text-decoration: none
-    display: inline-block
-    position: relative
-  & a:hover
-    color: $blueskyfolk
-  & #about, #blog, #tutorial, #empleo, #anunciarse, #privacidad
-    margin-left: 7%
-  & .left
-    font-weight: 600
-    position: absolute
-    left: 0.5%
-
-.flex
-  position: relative
-  margin: auto
-  width: 40px
-  height: 40px
-  top: -20px
-
 #login
   width: 370px
   margin: auto
   position: relative
   display: block
-  top: 120px
+  margin-top: 99px
   border-radius: 7px
   font-family: 'Open Sans', sans-serif
   z-index: 9999
   color: black
 
-.links
-  float: left
 
 /* Estilos para el botón ¿olvido su contraseña? */
 
@@ -154,7 +126,7 @@ body
   text-align: center
 
 
-.row h5
+div#login h5
   text-align: center
   color: #757575
   border-bottom: 1px solid #bdbdbd
@@ -217,12 +189,6 @@ body
   #background_cycler
     height: 100%
 
-  .footer_base
-    display: none
-
-  .namesn
-    margin-top: -10%
-
   #login
     width: 350px
 
@@ -252,11 +218,3 @@ body
 input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus
   border-bottom: 1px solid $bluebuttons !important
   box-shadow: 0 1px 0 0 $bluebuttons !important
-
-
-@media screen and (max-height: 700px) and (min-width: 800px)
-  #login
-    top: 50px
-
-  .namesn
-    top: -80px
