--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -54,9 +54,9 @@
               <div class="col l12 m12 s12">
                 <ul class="query-options">
                     <li class="list-vertical"><a href="/search/">Destacados</a></li>
-                    <li class="list-vertical"><a href="/search/1">Cuentas</a></li>
-                    <li class="list-vertical"><a href="/search/2">Publicaciones</a></li>
-                    <li class="list-vertical"><a href="/search/3">Imágenes</a></li>
+                    <li class="list-vertical"><a href="/search/accounts">Cuentas</a></li>
+                    <li class="list-vertical"><a href="/search/publications">Publicaciones</a></li>
+                    <li class="list-vertical"><a href="/search/images">Imágenes</a></li>
                     <li class="list-vertical">Videos</li>
                     <li class="list-vertical">Más opciones <i class="fa fa-caret-down" aria-hidden="true"></i>
                         <div id="dropdown-search" class="dropdown-options">
