--- a/skyfolk/templates/account/password_change.html
+++ b/skyfolk/templates/account/password_change.html
@@ -54,4 +54,9 @@
           </div>
     </form>
 	</div>
+
+	<script>
+  	$('.menu-config').find('li:nth-child(2)').css({'background-color': 'rgba(0,0,0,0.1)', 'color': '#1e88e5'});
+	</script>
+
 {% endblock %}
