--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -158,6 +158,11 @@ Para el manejo de las pestañas del usuario
         updateHash: false
   });
 </script>
+
+<script>
+  $('#menu-hr').find('li:nth-child(1)').css('background-color', 'rgba(0,0,0,0.1)');
+</script>
+
 <!-- Busqueda en tab-amigos -->
 <script>
   var options = {
