--- a/skyfolk/templates/account/relations.html
+++ b/skyfolk/templates/account/relations.html
@@ -27,5 +27,8 @@
                 paginateOnScrollMargin: 20
             });
         </script>
+        <script>
+            $('#menu-hr').find('li:nth-child(3)').css('background-color', 'rgba(0,0,0,0.1)');
+        </script>
 {% endblock %}
 {% endblock %}
