--- a/skyfolk/templates/django_messages/compose.html
+++ b/skyfolk/templates/django_messages/compose.html
@@ -48,5 +48,7 @@
 	<script>
 		autosize(document.querySelectorAll('textarea'));
 	</script>
-
+    <script>
+  	    $('#nav-menu-messages').find('li:nth-child(2)').css({'background-color': 'rgba(0,0,0,0.1)', 'color': '#1e88e5'});
+	</script>
 {% endblock %}
