--- a/skyfolk/templates/django_messages/outbox.html
+++ b/skyfolk/templates/django_messages/outbox.html
@@ -28,4 +28,7 @@
 <p class="no-msg">{% trans "No messages." %}</p>
 {% endif %}
     </div>
+    <script>
+  	    $('#nav-menu-messages').find('li:nth-child(3)').css({'background-color': 'rgba(0,0,0,0.1)', 'color': '#1e88e5'});
+	</script>
 {% endblock %}
