--- a/avatar/templates/avatar/change.html
+++ b/avatar/templates/avatar/change.html
@@ -67,4 +67,7 @@ $(document).ready(function() {
 </div>
         </div>
     </div>
+    <script>
+  	    $('.menu-config').find('li:nth-child(3)').css({'background-color': 'rgba(0,0,0,0.1)', 'color': '#1e88e5'});
+	</script>
 {% endblock %}
