--- a/skyfolk/templates/account/account_inactive.html
+++ b/skyfolk/templates/account/account_inactive.html
@@ -29,4 +29,7 @@
     {% endif %}
 </form>
 </div>
+    <script>
+  	    $('.menu-config').find('li:nth-child(8)').css({'background-color': 'rgba(0,0,0,0.1)', 'color': 'tomato'});
+	</script>
 {% endblock %}
