--- a/skyfolk/templates/account/cf-blocked.html
+++ b/skyfolk/templates/account/cf-blocked.html
@@ -46,4 +46,7 @@
         {% endfor %}
     </ul>
     </div>
+    <script>
+  	    $('.menu-config').find('li:nth-child(7)').css({'background-color': 'rgba(0,0,0,0.1)', 'color': '#1e88e5'});
+	</script>
 {% endblock %}
