--- a/skyfolk/templates/account/cf-pincode.html
+++ b/skyfolk/templates/account/cf-pincode.html
@@ -26,4 +26,8 @@
             $('#pincode').show();
         });
     </script>
+
+    <script>
+  	    $('.menu-config').find('li:nth-child(6)').css({'background-color': 'rgba(0,0,0,0.1)', 'color': '#1e88e5'});
+	</script>
 {% endblock %}
