--- a/skyfolk/templates/account/cf-privacity.html
+++ b/skyfolk/templates/account/cf-privacity.html
@@ -58,4 +58,8 @@
             </div>
         </div>
     </div>
+
+        <script>
+  	        $('.menu-config').find('li:nth-child(5)').css({'background-color': 'rgba(0,0,0,0.1)', 'color': '#1e88e5'});
+	    </script>
 {% endblock %}
