--- a/skyfolk/templates/account/cf-profile.html
+++ b/skyfolk/templates/account/cf-profile.html
@@ -89,4 +89,8 @@
 	   }
 	});
 	</script>
+
+	<script>
+  	$('.menu-config').find('li:nth-child(1)').css({'background-color': 'rgba(0,0,0,0.1)', 'color': '#1e88e5'});
+	</script>
 {% endblock %}
