--- a/skyfolk/templates/account/email.html
+++ b/skyfolk/templates/account/email.html
@@ -76,6 +76,10 @@
             </div>
             <button class="waves-effect waves-light btn blue darken-1" name="action_add" type="submit">{% trans "Add E-mail" %}</button>
         </form>
+
+    <script>
+  	    $('.menu-config').find('li:nth-child(4)').css({'background-color': 'rgba(0,0,0,0.1)', 'color': '#1e88e5'});
+	</script>
 {% endblock %}
 
 {% block extra_body %}
