--- a/skyfolk/templates/django_messages/inbox.html
+++ b/skyfolk/templates/django_messages/inbox.html
@@ -42,4 +42,8 @@
   </p>
   {% endif %}
 </div>
+
+    <script>
+  	    $('#nav-menu-messages').find('li:nth-child(1)').css({'background-color': 'rgba(0,0,0,0.1)', 'color': '#1e88e5'});
+	  </script>
 {% endblock %}
