--- a/skyfolk/templates/django_messages/trash.html
+++ b/skyfolk/templates/django_messages/trash.html
@@ -30,4 +30,8 @@
         <br />
         <div class="no-msg">{% trans "Deleted Messages are removed from the trash at unregular intervals, don't rely on this feature for long-time storage." %}</div>
     </div>
+
+    <script>
+  	    $('#nav-menu-messages').find('li:nth-child(4)').css({'background-color': 'rgba(0,0,0,0.1)', 'color': '#1e88e5'});
+	</script>
 {% endblock %}
