--- a/skyfolk/static/sass/configuracion.sass
+++ b/skyfolk/static/sass/configuracion.sass
@@ -78,6 +78,7 @@ html
   background-color: #fff
   border-top: 1px solid #e1e8ed
   padding: 8px 12px
+  cursor: pointer
 
 .menu-config li:hover
   color: $blueskyfolk
