--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -141,7 +141,8 @@ div#login h5 {
   border-radius: 7px;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
   padding: 0 0 30px;
-  margin-bottom: 5%; }
+  margin-bottom: 5%;
+  max-width: 370px; }
   .block-formregister .reco-passwd {
     position: absolute;
     right: 0;
@@ -171,7 +172,7 @@ div#login h5 {
   #background_cycler {
     height: 100%; }
 
-  #login {
+  #login, .block-formregister {
     width: 350px; } }
 .form-3 .form-group {
   margin-top: 1.25%; }
