--- a/skyfolk/static/css/mensajes_privados.css
+++ b/skyfolk/static/css/mensajes_privados.css
@@ -139,7 +139,8 @@ html {
   display: block;
   background-color: #fff;
   border-top: 1px solid #e1e8ed;
-  padding: 8px 12px; }
+  padding: 8px 12px;
+  cursor: pointer; }
 
 .menu-config li:hover {
   color: #1e88e5;
