--- a/skyfolk/static/sass/login-signup.sass
+++ b/skyfolk/static/sass/login-signup.sass
@@ -152,6 +152,7 @@ div#login h5
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15)
   padding: 0 0 30px
   margin-bottom: 5%
+  max-width: 370px
 
 
   & .reco-passwd
@@ -189,7 +190,7 @@ div#login h5
   #background_cycler
     height: 100%
 
-  #login
+  #login, .block-formregister
     width: 350px
 
 .form-3 .form-group
