--- a/skyfolk/static/sass/mensajes_privados.sass
+++ b/skyfolk/static/sass/mensajes_privados.sass
@@ -148,6 +148,7 @@ html
   background-color: #fff
   border-top: 1px solid #e1e8ed
   padding: 8px 12px
+  cursor: pointer
 
 .menu-config li:hover
   color: #1e88e5
