--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -43,7 +43,7 @@
           <a data-activates="vertical-menu" class="btn-flat left button-menu-left blue-text text-darken-1"><i class="material-icons">menu</i></a>
           {% include "account/menu-horizontal.html" %}
           <a data-activates="notification-menu" class="right button-right-notify btn-flat"><i class="material-icons">notifications</i><span id="live_notify_badge">0</span></a>
-          <div class="right field hide-on-med-only" id="searchform">
+          <div class="right field hide-on-med-and-down" id="searchform">
             <form method='post' action='/search/'>{% csrf_token %}
               {{searchForm}}
             </form>
