+ V3 + Paginacion en publicaciones, override funcion profile_view, ahora es una clase.

--- a/skyfolk/static/sass/core.sass
+++ b/skyfolk/static/sass/core.sass
@@ -430,3 +430,8 @@ ul#vertical-menu .userView .background
   height: 100%
   width: 100%
   z-index: -1
+
+  /* Pagination loader */
+
+.endless_loading
+  text-align: center
