--- a/skyfolk/static/css/core.css
+++ b/skyfolk/static/css/core.css
@@ -406,6 +406,10 @@ ul#vertical-menu .userView .background {
   left: 0;
   height: 100%;
   width: 100%;
-  z-index: -1; }
+  z-index: -1;
+  /* Pagination loader */ }
+
+.endless_loading {
+  text-align: center; }
 
 /*# sourceMappingURL=core.css.map */
