--- a/skyfolk/templates/account/privacity/private_profile.html
+++ b/skyfolk/templates/account/privacity/private_profile.html
@@ -1,5 +1,6 @@
 {% extends "account/privacity/base_privacity.html" %}
 
+{% block title %}<title>Perfil de {{ user_profile.username }}</title>{% endblock %}
 {% block content-text %}
     <h1>El perfil <strong>{{ user_profile.username }}</strong> es privado.</h1>
 {% endblock %}
