--- a/skyfolk/templates/account/tab-comentarios.html
+++ b/skyfolk/templates/account/tab-comentarios.html
@@ -1,12 +1,8 @@
 {% comment %}
   Pestaña de comentarios en el perfil
 {% endcomment %}
-{% load decorators %}
-{% load avatar_tags %}
-{% load app_filters %}
-{% load humanize %}
-  <div id="tab-comentarios">
-  {% if publications_top15|length == 0 %} <!-- Si el usuario no tiene comentarios, proponemos uno -->
+<div id="tab-comentarios">
+  {% if publications|length == 0 %} <!-- Si el usuario no tiene comentarios, proponemos uno -->
     <div class="no-comments" id="without-comments">
       <span class="no-comments-text-info">¡{{ user_profile.username }} no tiene comentarios!</span>
       <a id="compose-new-no-comments" class="no-comments-new-comment">
@@ -14,100 +10,15 @@
       </a>
     </div>
   {% endif %}
-  {% for pub in publications_top15 %}
-  <div class="wrapper" id="pub-{{ pub.pk }}" data-id="{{ user.pk }}">
-            <div class="box">
-            <span id="check-{{pub.pk}}" class="zoom-pub"><i class="fa fa-expand fa-lg"> </i></span>
-            <!-- Check para ampliar el mensaje... -->
-                  <div class="ampliado" id="expand-{{pub.pk}}">
-                      <div class="cerrar_ampliado"><i class="fa fa-close"></i></div>
-                      <div class="nombre_image">
-                    <ul>
-                      <li><i class="first">{{pub.author.first_name}} {{pub.author.last_name}}</i></li>
-                      <li><a class="name" href="/profile/{{ pub.author.username }}">{{pub.author.username}}</a></li>
-                    </ul>
-                    <div class="usr-img img-responsive">{% avatar pub.author %}</div>
-                      </div>
-                    <div class="parrafo comment-tab">
-                     <a href="/profile/{{ pub.author.username }}">{{pub.author.username}}</a>
-                        <a target="_blank">{{ pub.created|naturaltime }}</a><br><br>
-                        {{ pub.content|replace_decorators|safe }}
-                    </div>
-                      <div class="wrapper-reply">
-                        {% comment %}
-                        {% include "account/new_reply.html" %}
-                        {% endcomment %}
-                        <!-- RESPUESTAS A COMENTARIOS -->
-                        {% for reply in pub.replies %}
-                        <div class="comment-reply">
-                        <div class="avatar-reply">{% avatar reply.author %}</div>
-                            <div class="author-reply"><span class="triangle"> </span><a href="/profile/{{ reply.author }}">{{ reply.author }}</a></div>
-                              <div class="content-reply">{{ reply|safe|replace_decorators|safe }}</div>
-                        </div>
-                        {% endfor %}
-                    </div>
-                  </div>
-      <div class="image">
-        <div class="usr-img img-responsive">{% avatar pub.author %}</div>
-      </div>
+    {% include "account/profile_comments.html" %}
 </div>
-                <div class="articulo">
-                  <h2 class="h22"><a href="/profile/{{ pub.author.username }}" >{{ pub.author.username }}</a> ha comentado:  </h2>
-                  <div class="parrafo comment">
-                    <a target="_blank">{{pub.created|naturaltime}}</a><br>
-                      <div class="wrp-comment">{{ pub.content|replace_decorators|safe }}</div>
-                  </div>
-                    <div class="show-more" id="show-comment-{{ pub.pk }}">
-                        <a href="#">+ Mostrar más</a>
-                    </div>
-              <!-- OPCIONES DE COMENTARIOS -->
-                <div class="options_comentarios" id="options-comments">
-                    <ul class="opciones">
-                        {% if user.is_authenticated and user.username == pub.author.username %} <!-- Si estamos visitando un perfil que no es el nuestro -->
-                             <li class="trash-comment" title="Borrar comentario"><i class="fa fa-trash"></i></li>
-                        {% elif user.is_authenticated and user.username == user_profile.username %} <!-- Si estamos visitando nuestro propio perfil -->
-                             <li class="trash-comment" title="Borrar comentario"><i class="fa fa-trash"></i></li>
-                        {% endif %}
-                        {% with hates=pub.pk|total_hates %}
-                        {% if hates > 0 %}
-                            <li title="No me gusta" class="fa-stack hate-with-values" id="fa-hate">
-                                <span class="hate-comment">
-                                    <i class="fa fa-heart fa-stack-1x"></i>
-                                    <i class="fa fa-bolt fa-stack-1x fa-inverse"></i>
-                                    <i class="fa hate-value">{{ hates }}</i>
-                                </span>
-                            </li>
-                        {% else %}
-                            <li title="No me gusta" class="fa-stack" id="fa-hate">
-                                <span class="hate-comment">
-                                    <i class="fa fa-heart fa-stack-1x"></i>
-                                    <i class="fa fa-bolt fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </li>
-                        {% endif %}
-                    {% endwith %}
-                        <li title="¡Me gusta!" class="like-comment"><i id="like-heart" class="fa fa-heart">{{ pub.pk|total_likes }}</i></li>
-                       <li title="Citar" class="quote-comment"><i class="fa fa-quote-left">
-                       </i></li>
-                       <li title="Responder" class="reply-comment"><i class="fa fa-reply" id="reply-caja-comentario-{{ pub.pk }}"></i></li>
-                       <li title="Añadir a mi timeline" class="add-timeline"><i class="fa fa-tag"> {{ pub.pk|total_shares }}</i></li>
-                    </ul>
-                </div>
-                </div>
-                <div class="wrapper-reply">
-                {% include "account/new_reply.html" %}
-                <!-- RESPUESTAS A COMENTARIOS -->
-                {% for reply in pub.replies %}
-                <div class="comment-reply">
-                <div class="avatar-reply">{% avatar reply.author %}</div>
-                    <div class="author-reply">
-                      <a href="/profile/{{ reply.author }}">{{ reply.author }}</a>
-                      <i class="reply-created">{{reply.created|naturaltime}}</i>
-                    </div>
-                      <div class="content-reply">{{ reply|safe|replace_decorators|safe }}</div>
-                </div>
-                {% endfor %}
-                </div>
-    </div>
-    {% endfor %}
-  </div>
+{% block js %}
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="{{ STATIC_URL }}el-pagination/js/el-pagination.js"></script>
+    <script>
+        $.endlessPaginate({
+            paginateOnScroll: true,
+            paginateOnScrollMargin: 20
+        });
+    </script>
+{% endblock %}
