--- a/skyfolk/static/sass/login-signup.sass
+++ b/skyfolk/static/sass/login-signup.sass
@@ -24,8 +24,14 @@ body
 main
   flex: 1 0 auto
 
-.links > li
-  display: inline-block
+.page-footer
+  padding-top: 0 !important
+  > .row
+    margin-bottom: 0 !important
+    text-align: center
+    > ul li
+      display: inline-block
+
 .skyfolk-logo
   position: fixed
   font-family: "Pacifico", cursive !important
