--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -1,5 +1,5 @@
 {% comment %}
-  Template base para el login/registro
+Template base para el login/registro
 {% endcomment %}
 <!DOCTYPE html>
 <html lang="es">
@@ -17,43 +17,40 @@
         <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/materialize.min.css"  media="screen,projection" onload="if(media!='all')media='all'">
         <script src="{{STATIC_URL}}js/jquery.min.js"></script>
         <script type="text/javascript" src="{{STATIC_URL}}js/materialize.min.js"></script>
-	{% block extra_head %}
-	{% endblock %}
-
+        {% block extra_head %}
+        {% endblock %}
     </head>
     <body>
         <img class="active-img" src="{{STATIC_URL}}img/backgrounds/back.jpg" alt="background">
         <header></header>
         <nav class="hide-on-large-only">
             <div class="white nav-wrapper">
-              <a href="/" class="brand-logo center skyfolk-logo"><span>S</span>kyfolk</a>
+                <a href="/" class="brand-logo center skyfolk-logo"><span>S</span>kyfolk</a>
             </div>
-         </nav>
+        </nav>
         <div class="row">
             <div class="hide-on-med-and-down namesn">
                 <div onclick="javascript:location.href='/'" class="logo">
-                        <h5><i>S</i>kyfolk.</h5>
-                        <img src="{{STATIC_URL}}img/logo.png">
+                    <h5><i>S</i>kyfolk.</h5>
+                    <img src="{{STATIC_URL}}img/logo.png">
                 </div>
             </div>
         </div>
         <main>
-            {% block content %}{% endblock %}
+        {% block content %}{% endblock %}
         </main>
         <footer class="page-footer white">
-            <div class="container">
             <div class="row">
-              <div class="col l6 s12">
-                <h5 class="blue-text text-darken-1">Skyfolk</h5>
-                <p class="blue-text text-darken-1">Knows the world.</p>
-              </div>
-              <div class="col l4 offset-l2 s12">
-                <h5 class="blue-text text-darken-1">Links</h5>
-                <ul class="links">
+                <ul>
+                    <li class="left">
+                        <div class="chip">
+                            <a>© 2017 Skyfolk</a>
+                        </div>
+                    </li>
                     <li>
-                         <div class="chip">
-                             <a class="blue-text text-darken-1" href="/about/home">Sobre Skyfolk</a>
-                         </div>
+                        <div class="chip">
+                            <a class="blue-text text-darken-1" href="/about/home">Sobre Skyfolk</a>
+                        </div>
                     </li>
                     <li>
                         <div class="chip">
@@ -71,7 +68,8 @@
                         </div>
                     </li>
                     <li>
-                        <div class="chip">
+                        <div
+                                                               class="chip">
                             <a class="blue-text text-darken-1" href="/blog">Publicidad</a>
                         </div>
                     </li>
@@ -81,18 +79,7 @@
                         </div>
                     </li>
                 </ul>
-              </div>
             </div>
-          </div>
-            <div class="footer-copyright grey lighten-2">
-              <div class="container blue-text text-darken-1">
-                    <div class="row">
-                        <div class="col s12">
-                            © 2017 Skyfolk
-                        </div>
-                    </div>
-              </div>
-            </div>
-          </footer>
+        </footer>
     </body>
 </html>
