--- a/skyfolk/templates/account/card-user.html
+++ b/skyfolk/templates/account/card-user.html
@@ -163,7 +163,7 @@
                 <a id="likes"><strong>{{n_likes}}</strong><span title="me gusta" onclick="contador()">Me gusta</span></a>
             </li>
             <li>
-                <a class="to_gallery" href="/media/{{ user_profile.username }}/"><strong>{{ multimedia_count }}</strong><span>Fotos y vídeos</span></a>
+                <a class="to_gallery" href="/multimedia/{{ user_profile.username }}/"><strong>{{ multimedia_count }}</strong><span>Fotos y vídeos</span></a>
             </li>
           </ul>
         </div>
