--- a/skyfolk/static/sass/timeline.css
+++ b/skyfolk/static/sass/timeline.css
@@ -1,2 +1,160 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400);#section .wrapperx{position:relative;max-width:100%;float:left;left:0px;height:auto;background:0;border:0;box-shadow:0}#section .wrapperx .line li{list-style-type:none}#section .wrapperx .line{left:30px;background-color:#f5f5f5;box-shadow:0.1px 0.1px grey;width:10px;height:300px;max-height:auto;position:relative;display:block}#section .wrapperx .line .second{position:relative;min-width:350px;max-width:100%;background-color:transparent;height:auto;float:right;right:-387px;margin-bottom:70px;margin-top:10px;box-shadow:0.1px 0.1px grey}#section .wrapperx .line .second .head{background-color:#1e88e5;width:100%;height:30px;font-family:"Open Sans",sans-serif;font-size:20px;padding:0px 5px;position:absolute;color:#fff;font-weight:100}#section .wrapperx .line .second .head em{float:left;width:10px;height:10px;background-color:#1e88e5;margin-top:10px;left:-5px;position:absolute;transform:rotate(45deg);-moz-transform:rotate(45deg);-webkit-transform:rotate(45deg)}#section .wrapperx .line .head a{position:relative;top:5px;font-style:normal;text-decoration:none;color:#fff}#section .wrapperx .line .second #p{position:relative;display:inline-block;top:40px;text-align:center;font-family:"Open Sans",sans-serif;font-size:15px;font-weight:100;height:auto;width:100%;color:#000}#section .wrapperx .line #p img{width:20px;height:20px;z-index:9999}#section .wrapperx .line .second .head .fecha_{font-size:10px;float:right;position:relative;display:inline-block}#section .wrapperx .line .second .contenidoadicional{width:100%;height:auto;position:relative;top:20px;margin-top:30px;border-top:1px solid #ccc}#section .wrapperx .line .second .contenidoadicional img{width:80%;border-radius:7px;position:relative;margin:auto;left:10%;margin-top:30px}#section .wrapperx .line .second .acontecimiento{width:40px;height:40px;background-size:100%;background-repeat:no-repeat;background-position:center;background-color:#fff;border-radius:100%;border:1px solid #1e88e5;position:absolute;display:inline-block;top:-7px;right:372.5px}#section .wrapperx .line .second .controles{position:relative;display:inline-block;margin:auto;width:100%;height:40px;margin-top:10px}#section .wrapperx .line .second .controles ul{margin:auto;position:relative;width:100%;height:30px;text-align:center}#section .wrapperx .line .second .controles ul li{margin:10px;color:#ccc;display:inline-block;transition:all 0.3s linear;-webkit-transition:all 0.3s linear;-moz-transition:all 0.3s linear;cursor:pointer;padding:10px 7px}#section .wrapperx .line .second .controles ul li:nth-child(1):hover{color:tomato}#section .wrapperx .line .second .controles ul li:nth-child(2):hover{color:#fff}#section .wrapperx .line .second .controles ul li:nth-child(3):hover{color:#90bdcf}
+#section .wrapperx-hidden {
+  position: relative;
+  width: 100%;
+  float: left;
+  left: 0;
+  height: auto;
+  background: transparent; }
+
+#section .wrapperx {
+  position: relative;
+  width: 2%;
+  float: left;
+  left: 0;
+  height: auto;
+  background: transparent;
+  /* Second */ }
+  #section .wrapperx:before {
+    content: "";
+    background-color: #1e88e5;
+    width: 10px;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 40px;
+    opacity: 0.8; }
+  #section .wrapperx .timeline-pub {
+    margin-left: 30px;
+    width: 10px;
+    position: relative;
+    display: block; }
+  #section .wrapperx .timeline-pub .second {
+    position: relative;
+    min-width: 400px;
+    max-width: 100%;
+    background-color: transparent;
+    height: auto;
+    float: right;
+    right: -437px;
+    margin-bottom: 70px;
+    margin-top: 10px;
+    box-shadow: 0.1px 0.1px grey; }
+  #section .wrapperx .timeline-pub .second .head {
+    background-color: #1e88e5;
+    width: 100%;
+    height: 30px;
+    font-family: "Open Sans", sans-serif;
+    font-size: 20px;
+    padding: 0 5px;
+    position: absolute;
+    color: white;
+    font-weight: 100; }
+  #section .wrapperx .timeline-pub .second .head em {
+    float: left;
+    width: 10px;
+    height: 10px;
+    background-color: #1e88e5;
+    margin-top: 10px;
+    left: -5px;
+    position: absolute;
+    transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg); }
+  #section .wrapperx .timeline-pub .head a {
+    position: relative;
+    top: 5px;
+    font-style: normal;
+    text-decoration: none;
+    color: white; }
+  #section .wrapperx .timeline-pub .second #p {
+    position: relative;
+    display: inline-block;
+    top: 40px;
+    text-align: center;
+    font-family: "Open Sans", sans-serif;
+    font-size: 15px;
+    font-weight: 100;
+    height: auto;
+    width: 100%;
+    color: #000; }
+  #section .wrapperx .timeline-pub #p img {
+    width: 20px;
+    height: 20px;
+    z-index: 9999; }
+  #section .wrapperx .timeline-pub .second .head .fecha_ {
+    font-size: 10px;
+    float: right;
+    position: relative;
+    display: inline-block; }
+  #section .wrapperx .timeline-pub .second .contenidoadicional {
+    width: 100%;
+    height: auto;
+    position: relative;
+    top: 20px;
+    margin-top: 30px;
+    border-top: 1px solid #ccc; }
+  #section .wrapperx .timeline-pub .second .contenidoadicional img {
+    width: 80%;
+    border-radius: 7px;
+    position: relative;
+    left: 10%;
+    margin: 30px auto auto; }
+  #section .wrapperx .timeline-pub .second .acontecimiento {
+    width: 45px;
+    height: 45px;
+    background-size: 100%;
+    background: #fff no-repeat center;
+    border: 1px solid #1e88e5;
+    position: relative;
+    display: inline-block;
+    margin: 0 10px 0 -55px;
+    top: -7px; }
+    #section .wrapperx .timeline-pub .second .acontecimiento img {
+      width: 100%;
+      height: 100%; }
+  #section .wrapperx .timeline-pub .second .controles {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    height: 40px;
+    margin: 10px auto auto; }
+  #section .wrapperx .timeline-pub .second .controles ul {
+    margin: auto;
+    position: relative;
+    width: 100%;
+    height: 30px;
+    text-align: center; }
+    #section .wrapperx .timeline-pub .second .controles ul li {
+      margin: 10px;
+      color: #555;
+      display: inline-block;
+      cursor: pointer;
+      padding: 10px 7px; }
+      #section .wrapperx .timeline-pub .second .controles ul li:nth-child(1):hover {
+        color: #BBDEFB; }
+      #section .wrapperx .timeline-pub .second .controles ul li:nth-child(2):hover {
+        color: #1E88E5; }
+      #section .wrapperx .timeline-pub .second .controles ul li:nth-child(3):hover {
+        color: #808080; }
+      #section .wrapperx .timeline-pub .second .controles ul li:nth-child(4):hover {
+        color: #F06292; }
+      #section .wrapperx .timeline-pub .second .controles ul li:nth-child(5):hover {
+        color: #3F51B5; }
+      #section .wrapperx .timeline-pub .second .controles ul li:nth-child(6):hover {
+        color: tomato; }
+  #section .wrapperx .timeline-pub .second .controles ul .timeline-hate-with-values {
+    display: inline-block;
+    margin-top: -1.25%;
+    position: relative; }
+  #section .wrapperx .timeline-pub .second .controles ul li .timeline-hate-value {
+    position: relative;
+    float: right;
+    left: 16px;
+    font-size: 1.1em; }
+  #section .wrapperx .timeline-pub .second .controles ul .fa-heart i, #section .wrapperx .fa-tag i {
+    font-size: 0.855em;
+    position: relative;
+    float: right;
+    left: 6px; }
+
 /*# sourceMappingURL=timeline.css.map */
