--- a/skyfolk/static/sass/news.sass
+++ b/skyfolk/static/sass/news.sass
@@ -21,6 +21,7 @@ html, body
     box-shadow: $boxshadow
     padding: 10px
     margin: 0.95%
+    overflow: hidden
     border-radius: 3px
     & .img
       border-radius: 3px
