--- a/skyfolk/templates/account/base_news.html
+++ b/skyfolk/templates/account/base_news.html
@@ -7,12 +7,31 @@
 {% endblock %}
 
 {% block content %}
-<div class="container"> 
+<div class="container">
     <div class="row">
-        <div class="col l12 m12 s12 wrapper-news">
+        <div class="col s12 wrapper-news">
+            {% comment "Usuarios con mayor afinidad" %}
+            Lista de los 10 usuarios con mayor afinidad.
+            {% endcomment %} 
+            <div class="row">
+            {% for fav in fav_users %}
+                <div class="col l2 m12 s12">
+                    <div class="notice-item">
+                        <div class="col l3 m2 s3 img">
+                            {% avatar fav.receiver.username %}
+                        </div>
+                        <div class="col l8 m9 s8 author">
+                            <a href="/profile/{{fav.receiver.user}}">@{{ fav.receiver.user.username }}</a><i>{{ fav.receiver.user.first_name }} {{ fav.receiver.last_name }}</i>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+            </div>
+            <div class="divider"></div><br>
             <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/news.css" />
             {% for pub in publications %}
-            <div class="col l3 m12 s12 notice-item">
+            <div class="col l3 m12 s12">
+                <div class="notice-item">
                 <div class="col l3 m2 s3 img">
                     {% avatar pub.author.username %}
                 </div>
@@ -24,15 +43,9 @@
                     <p>{{pub.content}}</p>
                 </div>
             </div>
+        </div>
             {% endfor %}
         </div>
     </div>
-</div>
-<div class="row">
-    {% for fav_users in fav %}
-    <div class="col l3 m12 s12">
-        <p>HOLAA</p>
-    </div>
-    {% endfor %}
 </div>
 {% endblock %}
